fixed layout on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -42,7 +42,11 @@ body {
 
   &--cart {
     max-width: 820px;
-    margin: 90px auto;
+
+    @media (min-width: 568px) {
+      margin: 90px auto;
+    } 
+
     .content__title {
       margin: 0;
     }
@@ -112,11 +116,22 @@ body {
     padding-top: 30px;
     margin-top: 30px;
 
+    @media (max-width: 568px) {
+      flex-wrap: wrap;
+      justify-content: space-between;
+    } 
+
     &-img {
       display: flex;
       align-items: center;
       margin-right: 15px;
       width: 10%;
+
+      @media (max-width: 568px) {
+        width: 40%;
+        margin-right: 0;
+        margin-bottom: 1rem;
+      } 
 
       img {
         width: 80px;
@@ -129,6 +144,10 @@ body {
       flex-direction: column;
       justify-content: center;
       width: 40%;
+
+      @media (max-width: 568px) {
+        width: 60%;
+      } 
 
       h3 {
         font-weight: bold;
@@ -147,7 +166,11 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
+
+      @media (min-width: 568px) {
+        width: 13%;
+      } 
+      
 
       &-minus {
         svg {
@@ -159,6 +182,8 @@ body {
 
       b {
         font-size: 22px;
+        min-width: 2rem;
+        text-align: center;
       }
     }
 
@@ -166,7 +191,10 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 33%;
+
+      @media (min-width: 568px) {
+        width: 33%;
+      } 
 
       b {
         font-weight: bold;
@@ -179,7 +207,10 @@ body {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      width: 4%;
+
+      @media (min-width: 568px) {
+        width: 4%;
+      } 
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -235,7 +266,12 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 210px;
+        margin-right: 1rem;
+        min-width: 180px;
+
+        @media (min-width: 568px) {
+          margin-right: 0;
+        }
 
         border-color: darken($color: $gray-line, $amount: 10);
 
@@ -274,7 +310,7 @@ body {
 
   &--empty {
     margin: 0 auto;
-    width: 560px;
+    max-width: 560px;
     text-align: center;
 
     h2 {
